Alignment fixing

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -74,6 +74,7 @@ button {
   background-color: #4287f5;
   color: white;
   padding: 0.05rem 1rem;
+  /* margin: .05em; */
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.26);
 }
 
@@ -245,7 +246,8 @@ thead, tr {
 
 .cardFooter {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  justify-content: right;
 }
 
 .cardHeaderButtonContainer {
@@ -267,7 +269,7 @@ thead, tr {
 
 .cardFooterButtonContainer {
   display: flex;
-  margin-right: 1em;
+  margin-right: .5em;
   align-items: right;
   justify-content: right;
 }
